# mozaidic_cpp

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
includes/: Image.h
src/: Image.cpp
